# game

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
game/: main.cpp
game/include/: game.h
game/src/: camera.cpp  cell.cpp  game.cpp  main.cpp  world.cpp
lib/: CMakeLists.txt
lib/include/: game.h
lib/src/: game.cpp
